--- a/client/index.html
+++ b/client/index.html
@@ -14,6 +14,7 @@
     <!-- Source -->
     <script src="js/main.js"></script>
     <script src="js/ajax.js"></script>
+    <script src="js/vague_time.js"></script>
     <script src="js/conversation.js"></script>
     <script src="js/message.js"></script>
     <script src="js/ui.js"></script>
